@@ -41,7 +41,7 @@ $debug_mode = 'off';
 $local_time_offset = -5; // example: -5 or 5
 
 // Default BITCOIN-ONLY fiat (or stablecoin equivalent) market pairing (for charts / price alert fiat-equivalent value determination)
-// 'usd', 'cad', 'aud', 'sgd', 'hkd', 'gbp', 'eur', 'chf', 'rub', 'jpy', 'usdt', 'tusd', 'usdc'
+// 'aud', 'brl', 'cad', 'chf', 'eur', 'gbp', 'hkd', 'jpy', 'rub', 'sgd', 'try', 'tusd', 'usd', 'usdc', 'usdt'
 // SEE THE $coins_list CONFIGURATION NEAR THE BOTTOM OF THIS CONFIG FILE, FOR THE PROPER (CORRESPONDING)
 // MARKET PAIRING VALUE NEEDED FOR YOUR CHOSEN 'BTC' EXCHANGE (set in $btc_exchange directly above)
 $btc_fiat_pairing = 'usd'; 
@@ -403,6 +403,7 @@ $fiat_currencies = array(
 						'jpy' => 'J¥',
 						'rub' => '₽',
 						'sgd' => 'S$',
+						'try' => '₺',
 						'tusd' => 'Ⓢ ',
 						'usd' => '$',
 						'usdc' => 'Ⓢ ',
@@ -768,6 +769,10 @@ $coins_list = array(
                                           'lakebtc' => 'btcsgd'
                                                     ),
                                                     
+                                    'try' => array(
+                                          'btcturk' => 'BTCTRY'
+                                                    ),
+                                                    
                                     'tusd' => array(
                                           'binance' => 'BTCTUSD'
                                                     ),
@@ -794,6 +799,7 @@ $coins_list = array(
                                                     
                                     'usdt' => array(
                                           'binance' => 'BTCUSDT',
+                                          'btcturk' => 'BTCUSDT',
                                           'huobi' => 'btcusdt',
                                           'okex' => 'BTC-USDT'
                                                     ),
@@ -856,6 +862,10 @@ $coins_list = array(
                                           'binance' => 'ETHTUSD'
                                                     ),
                                                     
+                                    'try' => array(
+                                          'btcturk' => 'ETHTRY'
+                                                    ),
+                                                    
                                     'usd' => array(
                                           'coinbase' => 'ETH-USD',
                                           'kraken' => 'XETHZUSD',
@@ -868,6 +878,7 @@ $coins_list = array(
                                                     
                                     'usdt' => array(
                                         	'binance' => 'ETHUSDT',
+                                          'btcturk' => 'ETHUSDT',
                                           'huobi' => 'ethusdt',
                                         	'binance_us' => 'ETHUSDT',
                                           'bittrex' => 'USDT-ETH',
