@@ -37,9 +37,9 @@
 	
 	<h4>Privately track your investment in Bitcoin, Ethereum, Monero, Litecoin, Grin, Cosmos, and an unlimited number of other altcoins / cryptocurrencies. Customize the coin list / alerts / charts to your favorite assets and exchange pairings. No limits, add as many coins / markets as you want.</h4>
 	
-	<h4>Support for trading pairs (contact me to request more): AUD / BRL / BTC / CAD / CHF / ETH / EUR / GBP / HKD / JPY / LTC / RUB / SGD / TUSD (True USD) / USD / USDC / USDT (Tether) / XMR.</h4>
+	<h4>Support for trading pairs (contact me to request more): AUD / BRL / BTC / CAD / CHF / ETH / EUR / GBP / HKD / JPY / LTC / RUB / SGD / TRY / TUSD (True USD) / USD / USDC / USDT (Tether) / XMR.</h4>
 
-	<h4>Support for exchanges (contact me to request more): bigone / binance & binance_us / bitfinex & ethfinex / bitforex / bitflyer / bitpanda / bitstamp  / bittrex & bittrex_global / braziliex / btcmarkets / cex / coinbase / cryptofresh / gateio / gemini / graviex / hitbtc / hotbit / huobi / idex / kraken / kucoin / lakebtc / livecoin / okcoin / okex / poloniex / southxchange / tidebit / tradeogre / tradesatoshi / upbit.</h4>
+	<h4>Support for exchanges (contact me to request more): bigone / binance & binance_us / bitfinex & ethfinex / bitforex / bitflyer / bitpanda / bitstamp  / bittrex & bittrex_global / braziliex / btcmarkets / btcturk / cex / coinbase / cryptofresh / gateio / gemini / graviex / hitbtc / hotbit / huobi / idex / kraken / kucoin / lakebtc / livecoin / okcoin / okex / poloniex / southxchange / tidebit / tradeogre / tradesatoshi / upbit.</h4>
 	
     </div>
 
